--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -1,7 +1,7 @@
 <div id="div_description_feature" class="div-table container"> 
   <div> <h4> General Information </h4> </div>
-  <div class="table-bordered control-group">
-    <div class="span11">
+  <div class="table-bordered">
+    <div class="row-fluid">
       <div class="span2"> 
         <b> <%= t('activerecord.attributes.terms_of_membership.name') %>: </b> <%= @tom.name %> 
       </div>
@@ -20,16 +20,16 @@
         <b> <%= t('activerecord.attributes.terms_of_membership.provisional_days') %>: </b> 
         <%= @tom.provisional_days %> 
       </div>
-    </div>
-    <div class="span11">
-  <!--     <div class="span2"> 
-        <b> <%= t('activerecord.attributes.terms_of_membership.initial_fee') %>: </b> 
-        <%= number_to_currency(@tom.initial_fee) %>
-      </div> -->
       <div class="span2"> 
         <b> <%= t('activerecord.attributes.terms_of_membership.payment_is_expected') %>: </b> 
         <%= @tom.is_payment_expected ? 'Yes' : 'No' %>
       </div>
+    </div>
+    <div class="row-fluid">
+  <!--     <div class="span2"> 
+        <b> <%= t('activerecord.attributes.terms_of_membership.initial_fee') %>: </b> 
+        <%= number_to_currency(@tom.initial_fee) %>
+      </div> -->
       <div class="span2"> 
         <b> <%= t('activerecord.attributes.terms_of_membership.installment_period') %>: </b> 
         <%= @tom.installment_period.nil? ? 0 : @tom.installment_period  %>  <%= t('days') %>
@@ -42,10 +42,8 @@
         <b> <%= t('activerecord.attributes.terms_of_membership.external_code') %>: </b> 
         <%= @tom.api_role %> 
       </div>
-    </div>
-    <div class="span11">
       <% if @current_club.allow_club_cash_transaction? %>
-        <div class="span3"> 
+        <div class="span2"> 
           <b> <%= t('activerecord.attributes.terms_of_membership.initial_club_cash_amount') %>: </b> 
           <%= @tom.initial_club_cash_amount %> 
         </div>
@@ -62,26 +60,34 @@
   </div>
 </div>
 
-<div id="div_downgrade_feature" class="div-table row-fluid">
+<br>
+
+<div id="div_downgrade_feature" class="container">
   <div> <h4> Cancelation Feature </h4> </div>
-  <div class="table-bordered control-group"> 
-    <div class="span4"> 
-      <b> <%= t('activerecord.attributes.terms_of_membership.if_cannot_bill') %>: </b> 
-      <%= @tom.if_cannot_bill %>
+  <div class="table-bordered"> 
+    <div class="row-fluid"> 
+      <div class="span12"> 
+        <b> <%= t('activerecord.attributes.terms_of_membership.if_cannot_bill') %>: </b>  
+        <%= @tom.if_cannot_bill %>
+      </div>
     </div>
     <% if @tom.downgradable? %>
-      <div class="span4"> 
-        <b> <%= t('activerecord.model.subscription_plans').singularize %>: </b> 
-        <% if @tom.downgrade_tom %>
-          <%= @tom.downgrade_tom.name %> (ID: <%= @tom.downgrade_tom_id %>)
-        <% else %>
-          (Not set)
-        <% end %>
+      <div class="row-fluid"> 
+        <div class="span12"> 
+          <b> <%= t('activerecord.model.subscription_plans').singularize %>: </b> 
+          <% if @tom.downgrade_tom %>
+            <%= @tom.downgrade_tom.name %> (ID: <%= @tom.downgrade_tom_id %>)
+          <% else %>
+            (Not set)
+          <% end %>
+        </div>
       </div>
     <% elsif @tom.suspendable? %>
-      <div class="span4">
-        <b> <%= t('activerecord.attributes.terms_of_membership.suspension_period') %>: </b>
-        <%= @tom.suspension_period.nil? ? 0 : @tom.suspension_period  %>  <%= t('days') %> 
+      <div class="row-fluid"> 
+        <div class="span12">
+          <b> <%= t('activerecord.attributes.terms_of_membership.suspension_period') %>: </b>
+          <%= @tom.suspension_period.nil? ? 0 : @tom.suspension_period  %>  <%= t('days') %> 
+        </div>
       </div>
     <% end %>
   </div>
@@ -107,7 +113,7 @@
   <div id="description" class="div-table container">
     <div> <h4> Description </h4> </div>
     <div class="table-bordered control-group">
-      <div class="span11"> <%= @tom.description %> </div>
+      <div class="span12"> <%= @tom.description %> </div>
     </div>
   </div>
 <% end %>
@@ -115,10 +121,10 @@
 <div id="table_payment_gateway_configuration" class="div-table container"> 
   <div> <h4> Payment Gateway Configurations</h4> </div>
   <div class="table-bordered control-group">
-    <div  class="span11 <%= 'red' if @payment_gateway_configuration_development.nil? %>">
+    <div  class="row-fluid <%= 'red' if @payment_gateway_configuration_development.nil? %>">
       <b> <%= @payment_gateway_configuration_development.nil? ? t('activerecord.attributes.terms_of_membership.not_have_payment_gateway_development') : t('activerecord.attributes.terms_of_membership.has_payment_gateway_development') %> </b> 
     </div>
-    <div  class="span11 <%= 'red' if @payment_gateway_configuration_production.nil? %>">
+    <div  class="row-fluid <%= 'red' if @payment_gateway_configuration_production.nil? %>">
       <b> <%= @payment_gateway_configuration_production.nil? ? t('activerecord.attributes.terms_of_membership.not_have_payment_gateway_production') : t('activerecord.attributes.terms_of_membership.has_payment_gateway_production') %>  </b>
     </div>
   </div>
@@ -128,18 +134,18 @@
 <div id="table_email_template" class="container">
   <h4> <%= t('activerecord.email_template') %> </h4>
   <div class="table-bordered control-group">
-    <div class="span11">
+    <div class="row-fluid">
       <div class="span3"> <b> <%= t('activerecord.attributes.email_template.name') %> </b> </div> 
       <div class="span2"> <b> <%= t('activerecord.attributes.email_template.type') %> </b> </div> 
       <div class="span2"> <b> <%= t('activerecord.attributes.email_template.client') %> </b> </div> 
       <div class="span3"> <b> <%= t('activerecord.attributes.email_template.external_attributes') %> </b> </div> 
     </div>
     <% @email_templates.each do |et| %>
-      <div class="span11">
+      <div class="row-fluid">
         <div class="span3"> <%= et.name %> </div> 
         <div class="span2"> <%= et.template_type %> </div> 
         <div class="span2"> <%= et.client %> </div> 
-        <div class="span3"> <%= et.external_attributes.to_s %> </div> 
+        <div class="span5"> <%= et.external_attributes.to_s %> </div> 
       </div>
     <% end %>
   </div>
