--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -63,7 +63,7 @@
         <%= link_to("Cancel", (!disable_cancel ? member_cancel_path : "#"), :class => "btn  btn-large-w #{(disable_cancel ? "disabled" : "btn-danger")}", :disabled => (cannot? :cancel, Member or disable_cancel) , :id => 'cancel') %>
       </div>
       <div class="span4">
-        <%= link_to('Edit additional data', additional_data_path, :class => "btn btn-success btn-large-w", :id => 'edit_additional_attributes', :disabled => (cannot? :api_update, Member)) if @current_member.additional_data_form %>
+        <%= link_to('Edit additional data', additional_data_path, :class => "btn btn-success btn-large-w", :id => 'edit_additional_attributes', :disabled => (cannot? :api_update, Member)) if @current_member.additional_data_form and can? :update, MemberAdditionalData %>
       </div>
     </div>  
 
