[#59929462] Configured additional data fields for amerigorv

--- a/app/views/members/additional_data.html.erb
+++ b/app/views/members/additional_data.html.erb
@@ -10,7 +10,9 @@
         </div>
       </div>
     <% end %>
-    <button type="submit" class="btn">Submit</button>
+    <br>
+    <button type="submit" class="btn btn-success">Save</button>
+    <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
   </fieldset>
 <% end %>
 
