--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -348,9 +348,13 @@
             until_cancel_logic(); 
           }
           if ($('#is_payment_expected_yes').is(':checked')) {
+            window.atTheEndOfTheTrial = "payment";
             select_payment_is_expected();
+            update_labels();
           } else {
+            window.atTheEndOfTheTrial = "no payment";
             select_payment_is_not_expected();
+            update_labels();
           }
           break;
         case "third":
